[gd_scene load_steps=5 format=2]

[ext_resource path="res://T-RES/Coin.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Coin.gd" type="Script" id=2]
[ext_resource path="res://T-RES/coin_bounce.tres" type="Animation" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 30.6102

[node name="Coin" type="Area2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.025, 0.025 )
frames = ExtResource( 1 )
animation = "spin"
frame = 4
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bounce = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
